mod lecture time

--- a/package-group-detail-orange.html
+++ b/package-group-detail-orange.html
@@ -159,7 +159,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">1. Korean Pronounciation Rules 받침 발음</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">20 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -168,7 +168,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">2. Grammar 은/는(나라, 자기소개)]</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">32 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -177,7 +177,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">3. Grammar 이에요/예요, 이/가 아니에요</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">19 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -186,7 +186,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">4. Numbers 숫자 I</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">13 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -195,7 +195,43 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">5. Numbers 숫자 II</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">21 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>                          
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">6-1. Expression 개, 명, 권, 병</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">21 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">6-2. Expression 개, 명, 권, 병, 숫자 복습</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">13 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">7. Expression 얼마에요</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">21 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">8. Expression 몇시에요</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">12 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
