--- a/course-detail-orange.html
+++ b/course-detail-orange.html
@@ -199,7 +199,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">1. Korean Pronounciation Rules 받침 발음</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">20 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -208,7 +208,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">2. Grammar 은/는(나라, 자기소개)]</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">32 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -217,7 +217,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">3. Grammar 이에요/예요, 이/가 아니에요</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">19 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -226,7 +226,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">4. Numbers 숫자 I</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">13 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -235,7 +235,43 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">5. Numbers 숫자 II</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">21 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>                          
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">6-1. Expression 개, 명, 권, 병</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">21 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">6-2. Expression 개, 명, 권, 병, 숫자 복습</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">13 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">7. Expression 얼마에요</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">21 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">8. Expression 몇시에요</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">12 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -245,7 +281,7 @@
                     </ul>
                   </div>
                 </div>
-        </div>
+             </div>
 <!--  Course Topics End -->
 
         </div>
@@ -275,7 +311,7 @@
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-graph-bar"></i>Skill level : </span>
-                                Begginer l
+                                Beginner l
                             </div>
                         </li>
                         <li>
