--- a/course-detail-yellow.html
+++ b/course-detail-yellow.html
@@ -199,7 +199,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">1. Grammar_(으) 탈락</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">44 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -208,7 +208,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">2. Grammar_(ㄹ) 불규칙</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">15 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -217,7 +217,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">3. Grammar_(ㄷ) 불규칙</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">13 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -226,7 +226,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">4. Grammar_(ㅂ) 불규칙</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">16 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -235,7 +235,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">5. Grammar_(ㅅ) 불규칙</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">21 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -244,7 +244,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">6. Grammar_(으)세요</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">13 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -253,7 +253,7 @@
                             <a class="section-item-link" href="#">
                               <span class="item-name">7. Grammar_(이)나, 도, 와/과, 하고, (이)랑</span>
                               <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
+                                <span class="item-meta duration">20 min</span>
                                 <i class="item-meta course-item-status"></i>
                               </div>
                             </a>
@@ -293,7 +293,7 @@
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-graph-bar"></i>Skill level : </span>
-                                Begginer 2
+                                Beginner 2
                             </div>
                         </li>
                         <li>
